Dev: File structure init

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>liriliri</title>
 </head>
 <body>
-
+    <script src="engine/liriliri.js"></script>
+    <script src="engine/bootstrap.js"></script>
 </body>
 </html>
